--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 spring.application.name=springBoot3
+
+#Jpa ?? ??
 spring.jpa.show-sql=true
 
+#jpa ?? ?? ??
+spring.jpa.properties.hibernate.format_sql=true
 
+#h2 console ???
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
